--- a/week00_prep/welcome_to_python.ipynb
+++ b/week00_prep/welcome_to_python.ipynb
@@ -70,9 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of y is 4\n",
+      "256\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 1: Define our function\n",
     "def square(x):  # inputs to the function are placed inside the parentheses\n",
@@ -84,7 +93,9 @@
     "y = square(x)  # call function \"square\" on variable x, and assign the output of \"square\" to variable \"y\"\n",
     "print('The value of y is', y)  # print the value of variable \"y\" to the console\n",
     "\n",
-    "# Insert your code here!"
+    "# Insert your code here!\n",
+    "\n",
+    "print(square(16))"
    ]
   },
   {
@@ -637,7 +648,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "turbie",
+   "display_name": "lstm",
    "language": "python",
    "name": "python3"
   },
@@ -651,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
